@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use MARC::Convert::Wikidata::Utils qw(clean_edition_number);
-use Test::More 'tests' => 57;
+use Test::More 'tests' => 58;
 use Test::NoWarnings;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
 
@@ -18,6 +18,11 @@ is($ret, 1, encode_utf8("Edition number '$input_edition_number' after cleanup.")
 
 # Test.
 $input_edition_number = decode_utf8('První vydání');
+$ret = clean_edition_number($input_edition_number);
+is($ret, 1, encode_utf8("Edition number '$input_edition_number' after cleanup."));
+
+# Test.
+$input_edition_number = decode_utf8('Prvé vydanie');
 $ret = clean_edition_number($input_edition_number);
 is($ret, 1, encode_utf8("Edition number '$input_edition_number' after cleanup."));
 
